v0.4.1/_sources/autoapi/pya/aserver/index.rst.txt
:mod:`pya.aserver`
==================

.. py:module:: pya.aserver


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   pya.aserver.Aserver



.. data:: _LOGGER
   

   

.. class:: Aserver(sr=44100, bs=None, device=None, channels=2, backend=None, **kwargs)


   Pya audio server
   Based on pyaudio, works as a FIFO style audio stream pipeline,
   allowing Asig.play() to send audio segement into the stream.

   Examples:
   -----------
   >>> from pya import *
   >>> ser = Aserver()
   >>> ser.boot()
   AServer: sr: 44100, blocksize: ...,
            Stream Active: True, Device: ...
   >>> asine = Ugen().sine()
   >>> asine.play(server=ser)
   Asig('sine'): 1 x 44100 @ 44100Hz = 1.000s cn=['0']

   .. attribute:: default
      

      

   .. method:: startup_default_server(**kwargs)
      :staticmethod:


   .. method:: shutdown_default_server()
      :staticmethod:


   .. method:: device(self)
      :property:


   .. method:: __repr__(self)

      Return repr(self).


   .. method:: get_devices(self, verbose=False)

      Return (and optionally print) available input and output device


   .. method:: set_device(self, idx, reboot=True)

      Set audio device

      :param idx: Index of the device
      :type idx: int
      :param reboot: If true the server will reboot. (Default value = True)
      :type reboot: bool


   .. method:: boot(self)

      boot Aserver = start stream, setting its callback to this callback.


   .. method:: quit(self)

      Aserver quit server: stop stream and terminate pa


   .. method:: play(self, asig, onset=0, out=0, **kwargs)

      Dispatch asigs or arrays for given onset.


   .. method:: _play_callback(self, in_data, frame_count, time_info, flag)

      callback function, called from pastream thread when data needed.


   .. method:: stop(self)


   .. method:: __del__(self)



